--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "This repo is designed to work with Shopify Dawn theme v15.x.x",
   "main": "index.js",
   "scripts": {
+    "inject_clear": "(sed -i '' \"\/{% render \\'head-inject\\' %}\/d\" ./layout/theme.liquid) && (sed -i '' \"\/{% render \\'body-inject\\' %}\/d\" ./layout/theme.liquid)",
+    "inject_head": "(sed -i '' \"s@<\\/head>@{% render \\'head-inject\\' %}\\n<\\/head>@g\" ./layout/theme.liquid)",
+    "inject_body": "(sed -i '' \"s@<\\/body>@{% render \\'body-inject\\' %}\\n<\\/body>@g\" ./layout/theme.liquid)",
+
+    "init": "npm install && npm run inject_clear && npm run inject_head && npm run inject_body && git init && git add . && git commit -m \"Initial commit\" && git branch -M main",
     "connect": "shopify theme list --store=${PWD##*/}",
     "dev": "shopify theme dev --store=\"${PWD##*/}\"",
     "scss": "sass --watch sources/scss:assets --style compressed",
-    "tw": "npx tailwindcss -i ./sources/css/tw.css -o ./assets/tw.css --watch"
+    "tw:watch": "npx tailwindcss -i ./sources/css/tw.css -o ./assets/tw.css --watch",
+    "tw:build": "npx tailwindcss -i ./sources/css/tw.css -o ./assets/tw.min.css --minify"
   },
   "repository": {
     "type": "git",
